<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_corners"
    android:padding="19dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgOwner"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOwnerFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alice_smith"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvPostDate"
        app:layout_constraintStart_toEndOf="@id/imgOwner"
        app:layout_constraintTop_toTopOf="@id/imgOwner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPostDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_april_at_4_20_pm"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgOwner"
        app:layout_constraintStart_toStartOf="@id/tvOwnerFullName"
        app:layout_constraintTop_toBottomOf="@id/tvOwnerFullName" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="10dp"
        android:text="@string/we_re_interested_in_your_ideas_and_would_be_glad_to_build_something_bigger_out_of_it"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPostDate" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgMainCover"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgTopLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imgMainCover" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTopLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCommentsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="7"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgComment"
        app:layout_constraintEnd_toStartOf="@id/tvComments"
        app:layout_constraintStart_toEndOf="@id/imgComment"
        app:layout_constraintTop_toTopOf="@id/imgComment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/comments"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgComment"
        app:layout_constraintStart_toEndOf="@id/tvCommentsCount"
        app:layout_constraintTop_toTopOf="@id/imgComment" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toStartOf="@id/tvLikesCount"
        app:layout_constraintTop_toBottomOf="@id/imgTopLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLikesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="7"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgLikes"
        app:layout_constraintEnd_toStartOf="@id/tvLikes"
        app:layout_constraintTop_toTopOf="@id/imgLikes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgLikes"
        app:layout_constraintEnd_toStartOf="@id/imgShare"
        app:layout_constraintStart_toEndOf="@id/tvComments"
        app:layout_constraintTop_toTopOf="@id/imgLikes" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="9dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@id/tvShare"
        app:layout_constraintTop_toBottomOf="@id/imgTopLine" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgShare" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBottomLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvComments" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ed_corners"
        android:drawableEnd="@drawable/ic_attach"
        android:hint="@string/write_comment"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBottomLine" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>